# OpenInfraPlatform

./: .hgignore  .hgtags  CMakeLists.txt  OpenInfraPlatform_UI.pro  Readme.md
CodeMonkey/: cm.bcm
Data/: settings.xml
EMTCodeGen/: CodeGen.sln
ExpressBinding/: CMakeLists.txt
Expresso/: CMakeLists.txt  IFC4_edit.exp
Expresso/ExpressBinding/src/OpenInfraPlatform/ExpressBinding/: Attribute.cpp  Attribute.h  Entity.h  Schema.h  Type.h  eExpressTokenType.h  main.cpp  memory.h  parser.y  tokens.l
Ifc2x3/: CMakeLists.txt
Ifc4/: CMakeLists.txt
IfcAlignment/: CMakeLists.txt
IfcBridge/: CMakeLists.txt
IfcBridgeGenerator/: CMakeLists.txt
IfcRoad/: CMakeLists.txt
IfcTunnel/: CMakeLists.txt
IfcTunnelGenerator/: CMakeLists.txt
Infrastructure/: CMakeLists.txt
Infrastructure.Net/: Infrastructure.Net.sln
Infrastructure.Python/: import.py
Infrastructure/CodeMonkey/: BlueInfrastructure.cppcheck  codemonkey.bcm
Infrastructure/canonicalHeaders/: buw.BlueInfrastructure.h
Infrastructure/src/OpenInfraPlatform/Infrastructure/: BlueInfrastructure.h
Infrastructure/src/OpenInfraPlatform/Infrastructure/Alignment/: Alignment2DBased3D.cpp  Alignment2DBased3D.h  Alignment3DBased3D.cpp  Alignment3DBased3D.h  AlignmentModel.cpp  AlignmentModel.h  IAlignment3D.cpp  IAlignment3D.h  types.h
Infrastructure/src/OpenInfraPlatform/Infrastructure/Alignment/HorizontalAlignment/: HorizontalAlignment2D.cpp  HorizontalAlignment2D.h  HorizontalAlignmentElement2D.cpp  HorizontalAlignmentElement2D.h  HorizontalAlignmentElement2DArbitraryCurve.cpp  HorizontalAlignmentElement2DArbitraryCurve.h  HorizontalAlignmentElement2DArc.cpp  HorizontalAlignmentElement2DArc.h  HorizontalAlignmentElement2DClothoid.cpp  HorizontalAlignmentElement2DClothoid.h  HorizontalAlignmentElement2DClothoid_old.cpp  HorizontalAlignmentElement2DClothoid_old.h  HorizontalAlignmentElement2DLine.cpp  HorizontalAlignmentElement2DLine.h
Infrastructure/src/OpenInfraPlatform/Infrastructure/Alignment/VerticalAlignment/: VerticalAlignment2D.cpp  VerticalAlignment2D.h  VerticalAlignmentElement2D.cpp  VerticalAlignmentElement2D.h  VerticalAlignmentElement2DArc.cpp  VerticalAlignmentElement2DArc.h  VerticalAlignmentElement2DLine.cpp  VerticalAlignmentElement2DLine.h  VerticalAlignmentElement2DParabola.cpp  VerticalAlignmentElement2DParabola.h
Infrastructure/src/OpenInfraPlatform/Infrastructure/Bindings/: CSharpWrapper.cpp  CSharpWrapper.h  python.cpp
Infrastructure/src/OpenInfraPlatform/Infrastructure/Core/: CatmullRomSpline.h  IQueryable.cpp  IQueryable.h  Line2.h  Polyline.h
Infrastructure/src/OpenInfraPlatform/Infrastructure/CrossSection/: CrossSectionStatic.cpp  CrossSectionStatic.h
Infrastructure/src/OpenInfraPlatform/Infrastructure/DigitalElevationModel/: DigitalElevationModel.cpp  DigitalElevationModel.h  Surface.cpp  Surface.h
Infrastructure/src/OpenInfraPlatform/Infrastructure/EnergyConsumption/: ProfilePackage.cpp  ProfilePackage.h
Infrastructure/src/OpenInfraPlatform/Infrastructure/EnergyConsumption/Calculators/: CurvatureEnergyCalculator.cpp  CurvatureEnergyCalculator.h  FrictionEnergyCalculator_Davis.cpp  FrictionEnergyCalculator_Davis.h  FrictionEnergyCalculator_Iwnicki.cpp  FrictionEnergyCalculator_Iwnicki.h  IEnergyCalculator.cpp  IEnergyCalculator.h  KineticEnergyCalculator.cpp  KineticEnergyCalculator.h  PotentialEnergyCalculator.cpp  PotentialEnergyCalculator.h  RegenerableEnergyCalculator.cpp  RegenerableEnergyCalculator.h  SimpleRegenerativeEnergyCalculator.cpp  SimpleRegenerativeEnergyCalculator.h  TotalEnergyCalculator.cpp  TotalEnergyCalculator.h
Infrastructure/src/OpenInfraPlatform/Infrastructure/EnergyConsumption/Calculators/Parameters/: CurvatureParameter.cpp  CurvatureParameter.h  FrictionParameters_Davis.cpp  FrictionParameters_Davis.h  FrictionParameters_Iwnicki.cpp  FrictionParameters_Iwnicki.h  RegenerableEnergyParameters.cpp  RegenerableEnergyParameters.h
Infrastructure/src/OpenInfraPlatform/Infrastructure/EnergyConsumption/Profiles/: CurvatureProfile.cpp  CurvatureProfile.h  EnergyProfile.cpp  EnergyProfile.h  HeightProfile.cpp  HeightProfile.h  Profile.cpp  Profile.h  SpeedProfile.cpp  SpeedProfile.h  StationingPoint.cpp  StationingPoint.h
Infrastructure/src/OpenInfraPlatform/Infrastructure/Export/: ExcelReport.cpp  ExcelReport.h  Export.cpp  Export.h  IfcAlignmentExport.cpp  IfcAlignmentExport.h  IfcRoadExport.cpp  IfcRoadExport.h  LandXMLExport.cpp  LandXMLExport.h  ObjExport.cpp  ObjExport.h  OkstraExport.cpp  OkstraExport.h  SVGExport.cpp  SVGExport.h  SVGExportAdvanced.cpp  SVGExportAdvanced.h
Infrastructure/src/OpenInfraPlatform/Infrastructure/IfcPL/: AbstractSyntaxTree.cpp  AbstractSyntaxTree.h  AbstractSyntaxTreeNode.cpp  AbstractSyntaxTreeNode.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  PythonInterpreter.cpp  PythonInterpreter.h  token.cpp  token.h  variant.h
Infrastructure/src/OpenInfraPlatform/Infrastructure/Import/: IfcAlignmentImport.cpp  IfcAlignmentImport.h  IfcRoadImport.cpp  IfcRoadImport.h  Import.cpp  Import.h  LandXMLBaseTypes.h  LandXmlImport.cpp  LandXmlImport.h  OSMImport.cpp  OSMImport.h  OkstraImport.cpp  OkstraImport.h  OutputStreamLandXMLDataBuilder.cpp  OutputStreamLandXMLDataBuilder.h  RoadXMLImport.cpp  RoadXMLImport.h  RoadXMLParser.cpp  RoadXMLParser.h
Infrastructure/src/OpenInfraPlatform/Infrastructure/PointCloudProcessing/: PointCloudProcessing.cpp  PointCloudProcessing.h
LandXMLViewer/: CMakeLists.txt  LandXMLViewer.cpp  LandXMLViewer.h  main.cpp
RoadXMLViewer/: CMakeLists.txt  RoadXMLViewer.cpp  RoadXMLViewer.h  main.cpp
UnitTesting/: CMakeLists.txt
UnitTesting/src/: HorizontalAlignmentElement2DArbitraryCurve.cpp  HorizontalAlignmentElement2DArc.cpp  HorizontalAlignmentElement2DClothoid.cpp  HorizontalAlignmentElement2DLine.cpp  main.cpp
UnitTests/: CMakeLists.txt
UnitTests/src/: HorizontalAlignmentElement2DArbitraryCurve.cpp  HorizontalAlignmentElement2DArc.cpp  HorizontalAlignmentElement2DClothoid.cpp  HorizontalAlignmentElement2DLine.cpp  OkstraExportImport.cpp  main.cpp
oip/: main.cpp  (+1 more)
(+14315 files in other folders)
